[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-docker-service = "^0.2.4"
tox = "^4.6.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.33.0"
black = "^23.3.0"
ruff = "^0.0.267"

[tool.tox]
# See https://python-poetry.org/docs/master/faq/#usecase-3
legacy_tox_ini = """
    [tox]
    isolated_build = true

    env_list =
        py38
        py39
        py310
        py311

    [testenv]
    skip_install = true
    allowlist_externals = poetry
    commands_pre = poetry install -v --only=main,test
    commands = poetry run pytest -vx
"""

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
ignore = ["E501"]

[tool.poetry]
name = "sqlalchemy-nested-mutable"
version = "0.2.0"
readme = "README.md"
description = "SQLAlchemy Nested Mutable Types."
authors = ["Wonder <wonderbeyond@gmail.com>"]
license = "MIT"
repository = "https://github.com/wonderbeyond/sqlalchemy-nested-mutable"
homepage = "https://github.com/wonderbeyond/sqlalchemy-nested-mutable"
documentation = "https://github.com/wonderbeyond/sqlalchemy-nested-mutable"
keywords = ["SQLAlchemy", "Nested", "Mutable", "Types", "JSON"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "sqlalchemy_nested_mutable" },
]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.8"
pydantic = "^1.10.0"
typing-extensions = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = ["sqlalchemy_nested_mutable/py.typed"]
